<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL" Id="{ed74326d-99fd-42f7-9892-dbdbe2fcd114}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    mb_Input_Coils        : ARRAY [0..255] OF BOOL;
    mb_Output_Coils       : ARRAY [0..255] OF BOOL;
    mb_Input_Registers    : ARRAY [0..255] OF WORD;
    mb_Output_Registers   : ARRAY [0..255] OF WORD;
END_VAR ]]></Declaration>
  </GVL>
</TcPlcObject>